<resources>
    <string name="app_name">ECard</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_navigation_home_Menu">Send card request</string>

    <string name="start_selling_cards">Sell card now</string>
    <string name="welcome">Ecard is a card distribution partner of Ethio telecoms</string>
    <string name="start_working_now">Register as agent and sell cards.</string>
    <string name="have_nice_time">Be our retailer and increase your income by selling a card.</string>
    <string name="slider_sub_info1">Sell and distribute mobile cards by becoming our Agent or Retailer </string>
    <string name="slider_sub_info2">Increase your income by selling cards to nearby shops and users</string>
    <string name="slider_sub_info3">Sell mobile cards to user and get more income </string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">My cards</string>
    <string name="menu_slideshow">My retailers</string>
    <string name="menu_tools">Sell and buy</string>
    <string name="card_request">Card requests</string>
    <string name="menu_share">Settings</string>
    <string name="menu_send">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_agents_dashboard">AgentsDashboard</string>
    <string name="title_activity_card_request_and_my_requests">CardRequestAndMyRequestsActivity
    </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_retailers_dashboard">RetailersDashboardActivity</string>
    <string name="tab_text_1">Cards</string>
    <string name="tab_text_2">Downloads</string>
    <string name="tab_text_3">Sells</string>

    <string name="total_prints">Total prints</string>
    <string name="total_number_card">Total number of cards</string>
    <string name="total_card_request">Total card request</string>
</resources>