<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_cards"
            android:icon="@drawable/ic_sd_card_black_24dp"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/card_request"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="My cardRoom requests" />
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="Finances" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
